--- a/menu.html
+++ b/menu.html
@@ -54,8 +54,8 @@
 
 					</p>
 
-
-					<a href="registre.php" .php" class="btn" title="commence votre test">Commencer ==></a>
+					<a href="http://localhost/Aphp/A_MV/registre.php" class="btn" title="commence votre test">Commencer
+						==></a>
 					<!--"index.html"-->
 
 				</section>
